js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-typeof-import.js
DONOTEVALUATE
(
)
;
do
{
typeof
import
;
}
while
(
false
)
;
